syntax = "proto3";
package emerald.vault;
import "address.proto";
import "seed.proto";

// Wallet is a user defined group of addresses used together
message Wallet {
    // UUID
    string id = 1;
    // User defined label
    string label = 2;

    // List of HDPath accounts that belongs to the wallet, used to automate finding new
    // addresses and avoiding collision between different wallets
    repeated Reserved hd_accounts = 3;
    // Actual accounts in the wallet
    repeated WalletAccount accounts = 4;
    // Sequence for account ids in that wallet. Incremented each time a new account added, and used
    // as the id that new account. Using this sequence, if account gets deleted its id is not going
    // to be reused
    uint32 account_seq = 5;
}

// Reserved index on a HD path, an x from m/44'/x'
message Reserved {
    // reference to a source seed
    string seed_id = 1;
    // reserved account id
    uint32 account_id = 2;
}

// Account details
message WalletAccount {
    // id to reference account per wallet
    uint32 id = 1;
    // Associated blockchain; account may have multiple different assets on a single blockchain
    uint32 blockchain_id = 2;
    // true if account is disabled for receiving, i.e. only for sending
    bool receive_disabled = 3;
    // public address for reference
    Address address = 5;
    // reference to PK
    oneof pk_type {
        SeedHD hd_path = 7;
        string pk_id = 8;
    }
}

enum BlockchainId {
    CHAIN_UNSPECIFIED = 0;

    CHAIN_BITCOIN = 1;
    CHAIN_GRIN = 2;

    CHAIN_ETHEREUM = 100;
    CHAIN_ETHEREUM_CLASSIC = 101;

    // Sidechains and state channels
    CHAIN_LIGHTNING = 1001;

    // Testnets
    CHAIN_KOVAN = 10002;
    CHAIN_TESTNET_BITCOIN = 10003;
    CHAIN_FLOONET = 10004;
}
